--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ name = "pypi"
 codeforlife-portal = {path = ".",editable = true}
 cfl-common = {editable = true,path = "./cfl_common"}
 django-autoconfig = { git = 'https://github.com/ocadotechnology/django-autoconfig.git', ref = 'master' }
+nltk = "*"
+torch = "*"
+
 
 [dev-packages]
 django-selenium-clean = "==0.3.3"
